--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "@koa/cors": "2",
+    "async-busboy": "^0.7.0",
     "aws-sdk": "^2.488.0",
     "file-type": "^12.0.1",
     "fs": "^0.0.1-security",
     "koa": "^2.7.0",
     "koa-body": "^4.1.0",
-    "koa-router": "^7.4.0",
-    "multiparty": "^4.2.1"
+    "koa-router": "^7.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
