--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@koa/cors": "2",
     "async-busboy": "^0.7.0",
     "aws-sdk": "^2.488.0",
+    "dotenv": "^8.0.0",
     "file-type": "^12.0.1",
     "fs": "^0.0.1-security",
     "koa": "^2.7.0",
